# todopi

./: Cargo.toml  README.md  palette.plt
.cargo/: config
.github/workflows/: release.yml
src/: display.rs  main.rs  web.rs
src/image/: mod.rs  utils.rs
web/: README.md  package.json  plasmic.json
web/src/: App.tsx  TodoListProvider.tsx
web/src/components/: AllDone.tsx  Homepage.tsx  TodoList.tsx  TodoListItem.tsx  TokenForm.tsx  plasmic-tokens.theo.json
web/src/components/plasmic/todo_pi/: PlasmicAllDone.module.css  PlasmicAllDone.tsx  PlasmicHomepage.module.css  PlasmicHomepage.tsx  PlasmicTodoList.module.css  PlasmicTodoList.tsx  PlasmicTodoListItem.module.css  PlasmicTodoListItem.tsx  plasmic_todo_pi.module.css
web/src/components/plasmic/todo_pi/icons/: PlasmicIcon__Check.tsx  PlasmicIcon__CheckBold.tsx
web/src/lib/: todoist.ts
