[package]
name = "epd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.4"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", features = ["graphics"] }
linux-embedded-hal = "0.3.2"
