[package]
name = "epd-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-graphics = "0.7.1"
embedded-hal = "0.2.4"
epd-waveshare = { git = "https://github.com/caemor/epd-waveshare", features = ["graphics"], branch = "fix_single_write_for_7in5" }
rppal = { version = "0.14.1", features = ["hal", "hal-unproven"] }
anyhow = "1"


headless_chrome = { version = "1.0.5", features = [], default-features = false }

lazy_static = "1"

dither = "=1.3.6"
image = {version = "0.23", features = ["webp"]}
tokio = { version = "1.26.0", features = ["macros"] }
axum = "0.6.10"
mime_guess = "2"
clap = { version = "4.1.8", features = ["derive"] }
include_dir = "0.7.3"
